--- a/Src/Views/Sheared/_Layout_Primary.cshtml
+++ b/Src/Views/Sheared/_Layout_Primary.cshtml
@@ -17,6 +17,7 @@
     <link rel="stylesheet" media="screen" href="~/Content/css/styles.css" />
     <!-- Modernizr-->
     <script type="text/javascript" src="~/Scripts/Js/modernizr.min.js"></script>
+    @RenderSection("Styles", false)
 </head>
 <!-- Body-->
 <body>
