--- a/Src/Areas/Admin/Views/Partial/Product/PCPG.cshtml
+++ b/Src/Areas/Admin/Views/Partial/Product/PCPG.cshtml
@@ -8,6 +8,9 @@
             {{Title}}
         </td>
         <td class="text-center">
+            {{EnTitle}}
+        </td>
+        <td class="text-center">
             {{#if AssignCount}}
             <span class="label label-rounded label-warning">
                 {{AssignCount}}
@@ -15,21 +18,22 @@
             {{/if}}
         </td>
         <td class="text-center">
-            <a data-toggle="modal" data-target="#addEditPCPG" id="addEdit" 
-               data-id="{{ID}}" 
-               data-pid="{{PID}}" 
-               data-title="{{Title}}" 
-               data-hasChild="{{HasChild}}" 
-               data-assignCount="{{AssignCount}}" 
-               class="text-blue-800"><i class="icon-pencil"></i> ویرایش</a>
-            <a id="del" 
-               data-id="{{ID}}" 
-               data-hasChild="{{HasChild}}" 
-               data-assignCount="{{AssignCount}}"  class="text-danger-800"><i class="icon-bin"></i> حذف</a>
+            <a data-toggle="modal" data-target="#addEditPCPG" id="addEdit"
+               data-id="{{ID}}"
+               data-pid="{{PID}}"
+               data-title="{{Title}}"
+               data-enTitle="{{EnTitle}}"
+               data-hasChild="{{HasChild}}"
+               data-assignCount="{{AssignCount}}"
+               class="text-blue-800"><i class="icon-pencil"></i> ویرایش </a>
+            <a id="del"
+               data-id="{{ID}}"
+               data-hasChild="{{HasChild}}"
+               data-assignCount="{{AssignCount}}" class="text-danger-800"><i class="icon-bin"></i> حذف </a>
         </td>
     </tr>
     <tr class="collapse bg-f8" id="{{ID}}">
-        <td colspan="3">
+        <td colspan="4">
             <table class="table datatable">
                 <tbody></tbody>
             </table>
@@ -81,6 +85,13 @@
                                 <input type="hidden" class="form-control" name="ID" id="ID">
                                 <input type="text" class="form-control maxlength" maxlength="50" autocomplete="off" name="Title" id="Title">
                                 <span class="validation-error-label field-validation-valid mt-15" data-valmsg-for="Title" data-valmsg-replace="true"></span>
+                            </div>
+                        </div>
+                        <div class="form-group mb-40">
+                            <label class="control-label col-lg-2" for="EnTitle">عنوان انگلیسی :</label>
+                            <div class="col-lg-10">
+                                <input type="text" class="form-control maxlength text-left" maxlength="50" autocomplete="off" name="EnTitle" id="EnTitle">
+                                <span class="validation-error-label field-validation-valid mt-15" data-valmsg-for="EnTitle" data-valmsg-replace="true"></span>
                             </div>
                         </div>
                         <div class="form-group">
